--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,6 @@
     font-family: "Roboto Condensed", sans-serif;
 }
 
-
 /*Navbar*/
 .c-navbar {
     background-color: #FFFF;
@@ -13,7 +12,7 @@
     top: 0px;
     left: 0px;
     width: 100%;
-    z-index: 1;
+    z-index: 3;
 }
 
 .c-navbar__menu {
@@ -233,10 +232,8 @@
 }
 
 /*section CAROUSEL*/
-
-.c-section-carousel__content {
-    background: #F8F8F8 0% 0% no-repeat padding-box;
-    opacity: 1;
+.c-section-carousel {
+    background: #F8F8F8;   
 }
 
 .c-section-carousel__box {
@@ -296,6 +293,22 @@
     color: #FFFFFF;
 }
 
+.c-footer__content {
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.c-footer__riot {
+    height: 150px;
+}
+
+.c-footer__riot img {
+    width: 178px;
+    
+}
 
 @media (max-width:1024px) {
 
