--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,8 +75,7 @@
     flex-direction: column;
     justify-content: center;
     gap: 30px;
-    position: relative;
-    height: calc(100vh - 60px);
+    height: 1024px;
 }
 
 .c-section-fav__h1 h1 {
@@ -101,11 +100,13 @@
 
 .c-section-fav___arrow {
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    position: absolute;
+    margin-top: 20px;
+    /* Espaçamento superior */
     width: 100%;
-    bottom: 50px;
+    position: static;
+    /* Usar static para não interferir na estrutura do layout */
 }
 
 .c-section-fav___arrow figure img {
@@ -233,7 +234,7 @@
 
 /*section CAROUSEL*/
 .c-section-carousel {
-    background: #F8F8F8;   
+    background: #F8F8F8;
 }
 
 .c-section-carousel__box {
@@ -245,14 +246,43 @@
 }
 
 .owl-carousel {
-    max-width: 820px;
-    max-height: 460px;
+    overflow: visible;
+    width: 100%;
+    /* Ajuste conforme necessário */
+    margin: 0 auto;
+}
+
+.owl-carousel::before,
+.owl-carousel::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 20%;
+    /* Aumente a largura para cobrir mais da metade */
+    z-index: 2;
+}
+
+.owl-carousel::before {
+    left: 0;
+    background: linear-gradient(to right, #F8F8F8 50%, rgba(255, 255, 255, 1) 70%, rgba(255, 255, 255, 0));
+}
+
+.owl-carousel::after {
+    right: 0;
+    background: linear-gradient(to left, #F8F8F8 50%, rgba(255, 255, 255, 1) 70%, rgba(255, 255, 255, 0));
+}
+
+.owl-carousel .item {
+    width: 100% !important; /* Faz com que cada item ocupe 100% da largura do carrossel */
 }
 
 .item {
-    display: flex;
-    justify-content: space-between;
+    position: relative;
+    opacity: 1;
+    transition: opacity 0.5s ease; 
 }
+
 
 .c-section-baixar {
     background-color: #333333;
@@ -307,7 +337,7 @@
 
 .c-footer__riot img {
     width: 178px;
-    
+
 }
 
 @media (max-width:1024px) {
@@ -324,7 +354,7 @@
     }
 
     .c-section-fav__h1 h1 {
-        font-size: 72px;
+        font-size: 55px;
         line-height: 86px;
         font-weight: 700;
         color: #FFFFFF;
@@ -340,6 +370,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
     }
 
     .c-section-fav___arrow figure img {
@@ -494,6 +525,10 @@
     .c-section-baixar__h1 h1 {
         font-size: 36px;
         line-height: 46px;
+    }
+
+    .c-section-carousel__box {
+        height: 240px;
     }
 
 }
