--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,7 +59,7 @@
 
 /*Section sobre fav*/
 .c-section-fav {
-    background-image: url(./assets/img/image-bg.jpg);
+    background-image: url(assets/img/image-bg.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
